package org.himanshu.model.common;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class Coordinates {
    private Double latitude;
    private Double longitude;
}
