package org.himanshu.model.common;

public enum NotificationStatus {
    SENT,
    PENDING,
    RETRIED,
    FAILED
}
