package org.himanshu.model.reservation;

public class ChildSeat extends VehicleAddOn{
    @Override
    public double getCost() {
        return 150.00;
    }
}
