package org.himanshu.model.reservation;

public class DeepCleaning extends AddonService{
    @Override
    public double getCost() {
        return 300.00;
    }
}
