package org.himanshu.model.reservation;

public class Insurance extends AddonService{
    @Override
    public double getCost() {
        return 300.00;
    }
}
