package org.himanshu.model.reservation;

public class Navigation extends VehicleAddOn{
    @Override
    public double getCost() {
        return 500.00;
    }
}
