package org.himanshu.model.reservation;

public class OnDemandTowing extends AddonService{
    @Override
    public double getCost() {
        return 200.00;
    }
}
