package org.himanshu.model.reservation;

public class PassengerScreen extends AddonService{
    @Override
    public double getCost() {
        return 100.00;
    }
}
