package org.himanshu.model.reservation;

public enum VehicleReservationType{
    HOURLY,
    FOUR_HOURS,
    EIGHT_HOURS,
    DAY,
    MONTH,
}
