@startuml
class Invoice {
-String invoiceId;
-String reservationId;
-String userId;
-double usageCharges;
-double addonCost;
-double addonServicesCost;
-double taxes;
-double total;
}

class InvoiceNotification {
-String reservationId;
-String userId;
-LocalDateTime createdDate;
-NotificationStatus notificationStatus;
}

abstract class AddonService {
-String id;
-String name;
-String description;
-double cost;
}

class Chauffeur {
}
class DeepCleaning{
}
class Insurance{
}
class OnDemandTowing{
}
class WiFi{
}
Chauffeur --|> AddonService
DeepCleaning --|> AddonService
Insurance --|> AddonService
OnDemandTowing --|> AddonService
WiFi --|> AddonService

abstract class VehicleAddon {
-String id;
-String name;
-String description;
-double cost;
}
class ChildSeat{
}
class Navigation{
}
class PassengerScreen{
}
ChildSeat --|> VehicleAddon
Navigation --|> VehicleAddon
PassengerScreen --|> VehicleAddon

class RentalLocation {
String id;
Address address;
Coordinates coordinates;
}
class Coordinates {
double latitude;
double longitude;
}
class Address {
-String addressLine1;
-String addressLine2;
-String addressLine3;
-String street;
-String city;
-String state;
-String country;
-String pinCode;
}
RentalLocation *--Address
RentalLocation *--Coordinates

class VehicleInventory {
-String id;
-String reservationId;
-LocalDateTime reservationDate;
-ReservationStatus status;
-LocalDateTime fromDate;
-LocalDateTime dueDate;
-LocalDateTime returnDate;
-double startMileage;
-double endMileage;
-HireableVehicle vehicle;
-VehicleReservationType vehicleReservationType;
+VehicleInventory(VehicleReservation,HireableVehicle)
+VehicleInventory(HireableVehicle)

}

abstract class HireableVehicle {
    - String id;
    - String licensePlateNumber;
    - String qrCode;
    - String make;
    - String model;
    - int yearOfManufacture;
    - double mileage;
    - int numberOfSeats;
    - VehicleCategory vehicleCategory;
    - VehicleStatus vehicleStatus;
    - VehicleType vehicleType;
    - VehicleLocation parkedLocation;
    - Coordinates currentLocation;

}
VehicleInventory o-- HireableVehicle

class VehicleReservation {
-String reservationId;
-String usrId;
-LocalDateTime reservationDate;
-ReservationStatus status;
-LocalDateTime fromDate;
-LocalDateTime dueDate;
-LocalDateTime returnDate;
-Address pickupLocation;
-Address dropLocation;
-double startMileage;
-double endMileage;
-HireableVehicle vehicle;
-String accocatedVehicleId;
-VehicleType vehicleType;
-String invoiceId;
-List<VehicleAddon> vehicleAddons;
-List<AddonService> addonServices;
-VehicleReservationType vehicleReservationType;
}

VehicleReservation *-- VehicleAddon
VehicleReservation *-- AddonService

class ReservationReminder {
-LocalDateTime reservationDate;
-String reservationId;
-String userId;
-LocalDateTime createdDate;
-NotificationStatus notificationStatus;
}

enum NotificationStatus {
    SENT
    PENDING
    RETRIED
    FAILED
}

enum VehicleReservationType {
    HOURLY
    FOUR_HOURS
    EIGHT_HOURS
    DAY
    MONTH
}

@enduml